chore: changed deprecated bukkit methods